# space_simulator_gazebo_ros

./: README.md
moveit/move_it/: .setup_assistant  CMakeLists.txt  package.xml
moveit/move_it/config/: ompl_planning.yaml  ros_controllers.yaml  ur5.srdf
moveit/move_it/launch/: demo.launch  demo_gazebo.launch  demo_planning_execution.launch  gazebo.launch  move_group.launch  moveit_rviz.launch  planning_context.launch  run_benchmark_ompl.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml
moveit/move_it_above_gripper/: .setup_assistant  CMakeLists.txt  package.xml
moveit/move_it_above_gripper/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  ompl_planning.yaml  ros_controllers.yaml  ur5.srdf
moveit/move_it_above_magnet/: .setup_assistant  CMakeLists.txt  package.xml
plugins/: CMakeLists.txt  package.xml
plugins/src/: GazeboRosVelodyneLaser.cpp
scripts/: package.xml
scripts/src/: test_robot_motion.py
simulation/robot_description/: CMakeLists.txt  package.xml
simulation/robot_description/rviz/: example.rviz
simulation/robot_description/urdf/: VLP-16.urdf.xacro  aircraft.urdf  common.gazebo.xacro  suction.urdf.xacro  suction_joint_limited_robot.urdf.xacro  ur5.urdf.xacro  ur5_above_manipulation.urdf.xacro  ur5_above_manipulation_gripper.urdf.xacro  ur5_above_manipulation_joint_limited_robot.urdf.xacro  ur5_joint_limited_robot.urdf.xacro  ur5_robot_above_manipulation.urdf.xacro  ur5_robotiq85_gripper.urdf.xacro
simulation/robot_gazebo/: CMakeLists.txt  package.xml
(+73 files in other folders)
