<?xml version="1.0"?>
<package format="2">
  <name>robot_description</name>
  <version>0.0.0</version>
  <description>The robot_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="diego@todo.todo">diego</maintainer>


  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robotiq_description</exec_depend>



  <export>

  </export>
</package>
